--- a/style.css
+++ b/style.css
@@ -2,8 +2,24 @@ body {
     background: #CCCCCC
 }
 
+#banner {
+    width: 100%;
+}
+
+h1 {
+    text-align: center;
+    height: 100px;
+    border: 10px solid #000000 ;
+    padding: 20px;
+    margin: 10px;
+}
+
 p {
     text-align: center;
+}
+
+#missao {
+    font-size: 20px;
 }
 
 em strong {
