--- a/produtos.css
+++ b/produtos.css
@@ -28,6 +28,11 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    color: blue;
+    text-decoration: underline;
+}
+
 .produtos {
     width: 940px;
     margin: 0 auto;
@@ -45,6 +50,18 @@ nav a {
     border: 2px solid #000000;
     border-radius: 10px;
    
+}
+
+.produtos li:hover {
+    border-color: blue;
+}
+
+.produtos li:active {
+    border-color: greenyellow;
+}
+
+.produtos li:hover h2 {
+    font-size: 35px;
 }
 
 .produtos h2 {
