--- a/style.css
+++ b/style.css
@@ -99,19 +99,19 @@ form {
 	margin: 40px 0;
 }
 
-form label, form p {
-	display: block;
+form label, form legend {
+	display:block;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
 
 .input-padrao {
-    display: block;
-    margin: 0 0 20px;
-    padding: 10px 25px;
-    width: 50%;
+	display: block;
+	margin: 0 0 20px;
+	padding: 10px 25px;
+	width: 50%;
 }
 
 .checkbox {
-    margin: 20px 0;
+	margin: 20px 0;
 }
