--- a/style.css
+++ b/style.css
@@ -115,3 +115,21 @@ form label, form legend {
 .checkbox {
 	margin: 20px 0;
 }
+
+.enviar {
+	width: 40%;
+	padding: 10px 0;
+	background: orange;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	border: none;
+	border-radius: 10px;
+	transition: 1s all;
+	cursor: pointer;
+}
+
+.enviar:hover {
+	background: darkorange;
+	transform: scale(1.2);
+}
