--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 header {
 	background: #BBBBBB;
 	padding: 20px 0;
@@ -91,8 +95,7 @@ footer {
 }
 
 main {
-	width: 940px;
-	margin: 0 auto;
+	
 }
 
 form {
@@ -162,6 +165,14 @@ td, th {
 	clear: left;
 }
 
+.principal {
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+}
+
+
 .principal p {
 	margin: 0 0 1em;
 }
@@ -170,11 +181,7 @@ td, th {
 	font-weight: bold;
 }
 
-.principal em {
-	font-style: italic;
-}
-
-.imagembeneficios {
+.imagem-beneficios {
 	width: 60%;
 }
 
@@ -182,5 +189,54 @@ td, th {
     width: 120px;
     float: left;
     margin: 0 20px 20px 0;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.mapa {
+    padding:3em 0;
+    background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo {
+    width: 940px;
+    margin: 0 auto;
+
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
+
+.beneficios {
+    padding: 3em 0;
+	background: #888888;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:before {
+    content: "✪"
+}
+
+.itens:first-child {
+    font-weight: bold;
 }
 
