--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 header {
@@ -120,14 +120,14 @@ form label, form legend {
 }
 
 .enviar {
-	width: 40%;
-	padding: 10px 0;
+	width:40%;
+	padding: 15px 0;
 	background: orange;
 	color: white;
 	font-weight: bold;
 	font-size: 18px;
 	border: none;
-	border-radius: 10px;
+	border-radius: 5px;
 	transition: 1s all;
 	cursor: pointer;
 }
@@ -138,27 +138,27 @@ form label, form legend {
 }
 
 table {
-    margin: 20px 0 40px;
+	margin: 20px 0 40px;
 }
 
 thead {
-    background: #555555;
-    color: white;
-    font-weight: bold;
+	background: #555555;
+	color: white;
+	font-weight: bold;
 }
 
 td, th {
-    border: 1px solid #000000;
-    padding: 8px 15px;
+	border: 1px solid #000000;
+	padding: 8px 15px;
 }
 
-/* css da pagina principal */
 
+/* css da pÃ¡gina inicial */
 .banner {
-	width: 100%;
+	width:100%;
 }
 
-.titulo-principal{
+.titulo-principal {
 	text-align: center;
 	font-size: 2em;
 	margin: 0 0 1em;
@@ -166,12 +166,11 @@ td, th {
 }
 
 .principal {
-    padding: 3em 0;
-    background: #FEFEFE;
-    width: 940px;
-    margin: 0 auto;
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
 }
-
 
 .principal p {
 	margin: 0 0 1em;
@@ -181,62 +180,60 @@ td, th {
 	font-weight: bold;
 }
 
+.principal em {
+	font-style: italic;
+}
+
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+.mapa {
+	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios {
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child {
+	font-weight: bold;
+}
+
 .imagem-beneficios {
 	width: 60%;
 }
 
-.utensilios {
-    width: 120px;
-    float: left;
-    margin: 0 20px 20px 0;
-}
-
-.conteudo-beneficios {
-    width: 640px;
-    margin: 0 auto;
-}
-
-.lista-beneficios {
-    width: 40%;
-    display: inline-block;
-    vertical-align: top;
-}
-
-.mapa {
-    padding:3em 0;
-    background: linear-gradient(#FEFEFE, #888888);
-}
-
-.mapa-conteudo {
-    width: 940px;
-    margin: 0 auto;
-
-}
-
-.mapa p {
-    margin: 0 0 2em;
-    text-align: center;
-}
-
 .video {
-    width: 560px;
-    margin: 2em auto;
+	width: 560px;
+	margin: 2em auto;
 }
-
-.beneficios {
-    padding: 3em 0;
-	background: #888888;
-}
-
-.itens {
-    line-height: 1.5;
-}
-
-.itens:before {
-    content: "✪"
-}
-
-.itens:first-child {
-    font-weight: bold;
-}
-
