--- a/html5-And-CSS3/style.css
+++ b/html5-And-CSS3/style.css
@@ -248,3 +248,24 @@ td, th {
 	width: 560px;
 	margin: 2em auto;
 }
+
+/* Responsividade para Celular */
+
+@media screen and (max-width: 480px) { 
+
+    .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video {
+        width: auto;
+    }
+
+	h1 {
+		text-align: center;
+	}
+
+	nav {
+		position:static;
+	}
+
+	.lista-beneficios, imagem-beneficios {
+		width: 100%
+	}
+}
